--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,13 @@ services:
       - ./config.yaml:/app/config.yaml
     labels:
       - "com.centurylinklabs.watchtower.scope=hanglegehang-chatgpt-proxy-node"
+  watchtower:
+    image: containrrr/watchtower
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: --scope hanglegehang-chatgpt-proxy-node --cleanup --interval 600
+    restart: always
+    environment:
+      - TZ=Asia/Shanghai
+    labels:
+      - "com.centurylinklabs.watchtower.scope=hanglegehang-chatgpt-proxy-node"
