--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,23 @@
 version: '3.8'
 services:
-  chatgpt-proxy-node:
-    image: hanglegehang/chatgpt-proxy-node:latest
+  chatgpt-gateway-node:
+    image: hanglegehang/chatgpt-gateway-node:latest
     restart: always
-    container_name: chatgpt-proxy-node
     ports:
       - 8100:8100
     environment:
       TZ: Asia/Shanghai # 指定时区
-
     volumes:
       - ./config.yaml:/app/config.yaml
     labels:
-      - "com.centurylinklabs.watchtower.scope=hanglegehang-chatgpt-proxy-node"
+      - "com.centurylinklabs.watchtower.scope=hanglegehang-chatgpt-gateway-node"
   watchtower:
     image: containrrr/watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    command: --scope hanglegehang-chatgpt-proxy-node --cleanup --interval 600
+    command: --scope hanglegehang-chatgpt-gateway-node --cleanup --interval 600
     restart: always
     environment:
       - TZ=Asia/Shanghai
     labels:
-      - "com.centurylinklabs.watchtower.scope=hanglegehang-chatgpt-proxy-node"
+      - "com.centurylinklabs.watchtower.scope=hanglegehang-chatgpt-gateway-node"
