--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       TZ: Asia/Shanghai # 指定时区
     volumes:
       - ./config.yaml:/app/config.yaml
+      - ./logs/:/app/logs/
+
     labels:
       - "com.centurylinklabs.watchtower.scope=hanglegehang-chatgpt-gateway-node"
   watchtower:
