--- a/config.yaml
+++ b/config.yaml
@@ -6,17 +6,15 @@ server:
   errorLogPattern: "error-{Ymd}.log"  # 异常错误日志文件格式。默认为"error-{Ymd}.log"
   accessLogEnabled: true              # 是否记录访问日志。默认为false
   accessLogPattern: "access.log" # 访问日志文件格式。默认为"access-{Ymd}.log"
-  logger:
-    path: "./logs"   # 日志文件路径。默认为空，表示关闭，仅输出到终端
-    file: "{Y-m-d}.log" # 日志文件格式。默认为"{Y-m-d}.log"
-    prefix: ""            # 日志内容输出前缀。默认为空
-    level: "all"         # 日志输出级别
-    stdout: true          # 日志是否同时输出到终端。默认true
-    rotateSize: 104857600
-    rotateExpire: 24h          # 按照日志文件时间间隔对文件滚动切分。默认为0，表示关闭滚动切分特性
-    rotateBackupExpire: 720h             # 按照切分的文件有效期清理切分文件，当滚动切分特性开启时有效。默认为0，表示不备份，切分则删除
-    rotateBackupCompress: 0             # 滚动切分文件的压缩比（0-9）。默认为0，表示不压缩
-    rotateCheckInterval: "1h"          # 滚动切分的时间检测间隔，一般不需要设置。默认为1小时
+logger:
+  path: "./logs"   # 日志文件路径。默认为空，表示关闭，仅输出到终端
+  file: "info.log" # 日志文件格式。默认为"{Y-m-d}.log"
+  prefix: ""            # 日志内容输出前缀。默认为空
+  level: "info"         # 日志输出级别
+  stdout: true          # 日志是否同时输出到终端。默认true
+  rotateSize: "300M"
+  RotateBackupLimit: 10
+  rotateBackupExpire: "7d"            # 按照切分的文件有效期清理切分文件，当滚动切分特性开启时有效。默认为0，表示不备份，切分则删除
 
 # 网关鉴权key
 AUTH_KEY: ""
