--- a/config.yaml
+++ b/config.yaml
@@ -1,20 +1,24 @@
 server:
-  logPath: "./logs"                 # 日志文件存储目录路径，建议使用绝对路径。默认为空，表示关闭
-  logStdout: true               # 日志是否输出到终端。默认为true
-  errorStack: true               # 当Server捕获到异常时是否记录堆栈信息到日志中。默认为true
-  errorLogEnabled: true               # 是否记录异常日志信息到日志中。默认为true
-  errorLogPattern: "error-{Ymd}.log"  # 异常错误日志文件格式。默认为"error-{Ymd}.log"
-  accessLogEnabled: true              # 是否记录访问日志。默认为false
-  accessLogPattern: "access.log" # 访问日志文件格式。默认为"access-{Ymd}.log"
+    logPath: "./logs"                 # 日志文件存储目录路径，建议使用绝对路径。默认为空，表示关闭
+    logStdout: true               # 日志是否输出到终端。默认为true
+    errorStack: true               # 当Server捕获到异常时是否记录堆栈信息到日志中。默认为true
+    errorLogEnabled: true               # 是否记录异常日志信息到日志中。默认为true
+    errorLogPattern: "error-{Ymd}.log"  # 异常错误日志文件格式。默认为"error-{Ymd}.log"
+    accessLogEnabled: true              # 是否记录访问日志。默认为false
+    accessLogPattern: "access.log" # 访问日志文件格式。默认为"access-{Ymd}.log"
+    logger:
+        path: "./logs"   # 日志文件路径。默认为空，表示关闭，仅输出到终端
+        file: "info.log" # 日志文件格式。默认为"{Y-m-d}.log"
+
 logger:
-  path: "./logs"   # 日志文件路径。默认为空，表示关闭，仅输出到终端
-  file: "info.log" # 日志文件格式。默认为"{Y-m-d}.log"
-  prefix: ""            # 日志内容输出前缀。默认为空
-  level: "info"         # 日志输出级别
-  stdout: true          # 日志是否同时输出到终端。默认true
-  rotateSize: "300M"
-  RotateBackupLimit: 10
-  rotateBackupExpire: "7d"            # 按照切分的文件有效期清理切分文件，当滚动切分特性开启时有效。默认为0，表示不备份，切分则删除
+    path: "./logs"   # 日志文件路径。默认为空，表示关闭，仅输出到终端
+    file: "info.log" # 日志文件格式。默认为"{Y-m-d}.log"
+    prefix: ""            # 日志内容输出前缀。默认为空
+    level: "info"         # 日志输出级别
+    stdout: true          # 日志是否同时输出到终端。默认true
+    rotateSize: "300M"
+    RotateBackupLimit: 10
+    rotateBackupExpire: "7d"            # 按照切分的文件有效期清理切分文件，当滚动切分特性开启时有效。默认为0，表示不备份，切分则删除
 
 # 网关鉴权key
 AUTH_KEY: ""
