--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   chatgpt-gateway-node:
-    image: hanglegehang/chatgpt-gateway-node:test
+    image: hanglegehang/chatgpt-gateway-node:latest
     restart: no
     ports:
       - 8100:8100
