--- a/goaccess/conf/goaccess.conf
+++ b/goaccess/conf/goaccess.conf
@@ -6,6 +6,8 @@ log-format %d %t.%^ {%^} %s "%m %^ %v %U %H" %T, %h, %R, "%u"
 config-dialog false
 
 hl-header true
+# domain：你的域名，path：反代路径，如：wss:abc.com:443/wss-r
+# ws-url wss:domain:443/${path}
 
 json-pretty-print false
 
@@ -65,42 +67,6 @@ all-static-files false
 
 double-decode false
 
-# Enable parsing/displaying the given panel.
-#
-#enable-panel VISITORS
-#enable-panel REQUESTS
-#enable-panel REQUESTS_STATIC
-#enable-panel NOT_FOUND
-#enable-panel HOSTS
-#enable-panel OS
-#enable-panel BROWSERS
-#enable-panel VISIT_TIMES
-#enable-panel VIRTUAL_HOSTS
-#enable-panel REFERRERS
-#enable-panel REFERRING_SITES
-#enable-panel KEYPHRASES
-#enable-panel STATUS_CODES
-#enable-panel REMOTE_USER
-#enable-panel CACHE_STATUS
-#enable-panel GEO_LOCATION
-#enable-panel MIME_TYPE
-#enable-panel TLS_TYPE
-
-# Hide a referrer but still count it. Wild cards are allowed. i.e., *.bing.com
-#
-#hide-referrer *.google.com
-#hide-referrer bing.com
-
-# Hour specificity. Possible values: `hr` (default), or `min` (tenth
-# of a minute).
-#
-#hour-spec min
-
-# Ignore crawlers from being counted.
-# This will ignore robots listed under browsers.c
-# Note that it will count them towards the total
-# number of requests, but excluded from any of the panels.
-#
 ignore-crawlers false
 
 # Parse and display crawlers only.
@@ -137,85 +103,8 @@ ignore-panel GEO_LOCATION
 ignore-panel MIME_TYPE
 ignore-panel TLS_TYPE
 
-# Ignore referrers from being counted.
-# This supports wild cards. For instance,
-# '*' matches 0 or more characters (including spaces)
-# '?' matches exactly one character
-#
-#ignore-referrer *.domain.com
-#ignore-referrer ww?.domain.*
-
-# Ignore parsing and displaying one or multiple status code(s)
-#
-#ignore-status 400
-#ignore-status 502
-
-# Keep the last specified number of days in storage. This will recycle the
-# storage tables. e.g., keep & show only the last 7 days.
-#
-# keep-last 7
-
-# Disable client IP validation. Useful if IP addresses have been
-# obfuscated before being logged.
-#
-# no-ip-validation true
-
-# Number of lines from the access log to test against the provided
-# log/date/time format. By default, the parser is set to test 10
-# lines. If set to 0, the parser won't test  any  lines and will parse
-# the whole access log.
-#
-#num-tests 10
-
-# Parse log and exit without outputting data.
-#
-#process-and-exit false
-
-# Display real OS names. e.g, Windows XP, Snow Leopard.
-#
 real-os true
 
-# Sort panel on initial load.
-# Sort options are separated by comma.
-# Options are in the form: PANEL,METRIC,ORDER
-#
-# Available metrics:
-#  BY_HITS     - Sort by hits
-#  BY_VISITORS - Sort by unique visitors
-#  BY_DATA     - Sort by data
-#  BY_BW       - Sort by bandwidth
-#  BY_AVGTS    - Sort by average time served
-#  BY_CUMTS    - Sort by cumulative time served
-#  BY_MAXTS    - Sort by maximum time served
-#  BY_PROT     - Sort by http protocol
-#  BY_MTHD     - Sort by http method
-# Available orders:
-#  ASC
-#  DESC
-#
-#sort-panel VISITORS,BY_DATA,ASC
-#sort-panel REQUESTS,BY_HITS,ASC
-#sort-panel REQUESTS_STATIC,BY_HITS,ASC
-#sort-panel NOT_FOUND,BY_HITS,ASC
-#sort-panel HOSTS,BY_HITS,ASC
-#sort-panel OS,BY_HITS,ASC
-#sort-panel BROWSERS,BY_HITS,ASC
-#sort-panel VISIT_TIMES,BY_DATA,DESC
-#sort-panel VIRTUAL_HOSTS,BY_HITS,ASC
-#sort-panel REFERRERS,BY_HITS,ASC
-#sort-panel REFERRING_SITES,BY_HITS,ASC
-#sort-panel KEYPHRASES,BY_HITS,ASC
-#sort-panel STATUS_CODES,BY_HITS,ASC
-#sort-panel REMOTE_USER,BY_HITS,ASC
-#sort-panel CACHE_STATUS,BY_HITS,ASC
-#sort-panel GEO_LOCATION,BY_HITS,ASC
-#sort-panel MIME_TYPE,BY_HITS,ASC
-#sort-panel TLS_TYPE,BY_HITS,ASC
-
-# Consider the following extensions as static files
-# The actual '.' is required and extensions are case sensitive
-# For a full list, uncomment the less common static extensions below.
-#
 static-file .css
 static-file .js
 static-file .jpg
