--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,10 @@ services:
       - ./data:/data
     environment:
       - TZ=Asia/Shanghai
+      - MaxPowThread=2
+      - GIN_MODE=release
+      - LOG_LEVEL=info
+      - TZ=Asia/Shanghai   
     labels:
       - "com.centurylinklabs.watchtower.scope=hanglegehang-chatgpt-gateway-node"
   goaccess:
