--- a/config.yaml
+++ b/config.yaml
@@ -38,11 +38,13 @@ POW_URL_LIST:
 #授权码
 LICENCE: ""
 
+IQRecovery: true
+
 #网关节点参与代理，不支持热更新
 GATEWAY_ENABLE_PROXY: false
 
 #后端预计算sentinel token 默认为false，支持热更新，开启后则为api模式，可与chat2api plus搭配使用
-BackendGenSentinel: false
+BackendGenSentinel: true
 
 # 管理后台密码
 # WEB_PASSWORD: "123789"
