--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,13 @@ services:
       - LOG_LEVEL=info
     labels:
       - "com.centurylinklabs.watchtower.scope=hanglegehang-chatgpt-gateway-node"
+  wm-turnstile:
+    image: hanglegehang/wm-turnstile:latest
+    ports:
+      - "7200:3000"
+    restart: always
+    environment:
+      - LANG=zh_CN.UTF-8
   goaccess:
     image: allinurl/goaccess
     volumes:
