--- a/config.yaml
+++ b/config.yaml
@@ -46,6 +46,8 @@ GATEWAY_ENABLE_PROXY: false
 #后端预计算sentinel token 默认为false，支持热更新，开启后则为api模式，可与chat2api plus搭配使用
 BackendGenSentinel: true
 
+LoginSentinelEndpoint: "http://wm-turnstile:3000"
+
 # 管理后台密码
 # WEB_PASSWORD: "123789"
 
